--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "DLVOOL"
 title_separator          : "-"
 name                     : "DLVOOL"
 description              : "DLVOOL"
-url                      : "https://www.dlvool.com"
+url                      : "http://www.dlvool.com"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
